# molsim

./: .gitignore  CMakeLists.txt  README.md  molsim.cpp
test_data/: 199_mols.smi  256_mols.sdf  41913_mols.smi
